1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>

	* mel.el (mel-b-builtin): New variable.

1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>

	* FLIM-ELS: require 'pccl.
	(flim-modules): Check CCL availability by broken facility.

1998-11-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* eword-decode.el (eword-decode-structured-field-body): New
	implementation; abolish optional argument `must-unfold'; delete
	DOC-string.
	(eword-decode-and-unfold-structured-field-body): Renamed from
	`eword-decode-and-unfold-structured-field'; delete DOC-string.
	(eword-decode-and-fold-structured-field-body): Renamed from
	`eword-decode-and-fold-structured-field'; abolish optional
	argument `must-unfold'; delete DOC-string.
	(eword-decode-unstructured-field-body): Abolish optional argument
	`must-unfold'; delete DOC-string.
	(eword-decode-and-unfold-unstructured-field-body): Renamed from
	`eword-decode-and-unfold-unstructured-field'; delete DOC-string.
	(eword-decode-unfolded-unstructured-field-body): New function.

1998-11-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Use
	`mime-find-field-presentation-method' and
	`mime-find-field-decoder-internal'.

	* eword-decode.el (mime-find-field-presentation-method): New
	macro.
	(mime-find-field-decoder-internal): New function.
	(mime-find-field-decoder): New implementation (use
	mime-find-field-decoder-internal).
	(mime-decode-header-in-region): Use
	`mime-find-field-presentation-method' and
	`mime-find-field-decoder-internal'.

1998-11-08  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* mmgeneric.el (mime-insert-header-from-buffer): Rename
	field-presentation-mode `folding' to `wide'.

	* eword-decode.el: Rename field-presentation-modes from `native',
	`folding', `unfolding', `unfolding-xover' to `plain', `wide',
	`summary', `nov'.

1998-11-07  Tanaka Akira  <akr@jaist.ac.jp>

	* eword-decode.el (mime-set-field-decoder): Add mode `unfolding-xover'.
	(mime-find-field-decoder): Ditto.
