@@ -1,5 +1,10 @@
 1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>
 
+	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): workaround 
+	for mule 2.3@19.34.
+
+1998-11-12  Tanaka Akira  <akr@jaist.ac.jp>
+
 	* mel.el (mel-b-builtin): New variable.
 
 1998-11-10  Tanaka Akira  <akr@jaist.ac.jp>
